force-app/main/default/objects/Krow__Klient_Survey_Configuration__mdt/Krow__Klient_Survey_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Klient Survey Configuration</label>
    <pluralLabel>Klient Survey Configurations</pluralLabel>
</CustomObject>