force-app/main/default/objects/Krow__Klient_Survey_Configuration__mdt/fields/Krow__Klient_Create_Scheduler_Records_Limit__c.field-meta.xml
<CustomField>
    <fullName>Krow__Klient_Create_Scheduler_Records_Limit__c</fullName>
    <label>Klient Create Scheduler Records Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>