force-app/main/default/objects/Krow__Klient_Survey_Configuration__mdt/fields/Krow__Save_Survey_Scheduler_Synchronous__c.field-meta.xml
<CustomField>
    <fullName>Krow__Save_Survey_Scheduler_Synchronous__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Save Survey Scheduler Synchronous</label>
    <type>Checkbox</type>
</CustomField>